# AI-on-Arm

./: License.md  README.md  lab1 (1).ipynb  lab1.ipynb  lab2.ipynb  lab3 (1).ipynb  lab3 (3).ipynb  lab3.ipynb  setup_graviton.sh  setup_pi5.sh
openelm_results/: f16_grav_results.csv  f16_grav_results.txt  f16_pi_results.csv  q4_grav_results.csv  q4_grav_results.txt  q4_pi_results.csv  q4_pi_results.txt  q8_grav_results.csv  q8_grav_results.txt  q8_pi_results.csv  q8_pi_results.txt
scripts/: bench_f32.sh  bench_q4.sh  benchmark_openelm.sh  chat_Q4.sh  chat_Q8.sh  chat_f32.sh  convert_openelm_to_gguf.sh  download_openelm_hf.py  f16_pi_results.txt  parse_results.py  q4_pi_results.txt  q8_pi_results.txt  talk_to_openelm.py
src/c/: benchmark_int8_neon.c  benchmark_naive.c
src/c/.ipynb_checkpoints/: benchmark_fp32_neon-checkpoint.c
src/cpp/blas/: CMakeLists.txt  benchmark_f32.cpp  f32_inf.cpp
src/cpp/common/: sizes.cpp
src/cpp/f16_f16_f16p/: CMakeLists.txt  benchmark_f16.cpp  benchmark_f16_scaling.cpp  kai_f16_inf.cpp
src/cpp/f32_f32_f32p/: CMakeLists.txt  benchmark_f32.cpp  benchmark_f32_scaling.cpp  kai_f32_inf.cpp
src/cpp/f32_i8_i4_dotprod/: CMakeLists.txt  benchmark_i8_dotprod.cpp  benchmark_i8_dotprod_scaling.cpp  kai_i8_dotprod_inf.cpp
src/cpp/f32_i8_i4_i8mm/: CMakeLists.txt  benchmark_i8_i8mm.cpp  benchmark_i8_i8mm_scaling.cpp  kai_i8_i8mm_inf.cpp
src/cpp/naive/: CMakeLists.txt  benchmark_naive.cpp  kernel.h
src/cpp/results/: blas_f32_scaling_results.csv  f16_scaling_results.csv  f32_scaling_results.csv  i8_dotprod_scaling_results.csv  i8_i8mm_scaling_results.csv
